@@ -3,8 +3,9 @@ package com.jerae.jsecurity.commands;
 import com.jerae.jsecurity.managers.BanEntry;
 import com.jerae.jsecurity.managers.ConfigManager;
 import com.jerae.jsecurity.managers.PunishmentManager;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer;
 import org.bukkit.Bukkit;
-import org.bukkit.ChatColor;
 import org.bukkit.OfflinePlayer;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
@@ -31,30 +32,33 @@ public class BanCommand implements CommandExecutor, TabCompleter {
     @Override
     public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
         if (args.length < 1) {
-            sender.sendMessage(ChatColor.RED + "Usage: /ban <player> [reason] [-s]");
+            Component usageMessage = LegacyComponentSerializer.legacyAmpersand().deserialize("&cUsage: /ban <player> [reason] [-s]");
+            sender.sendMessage(usageMessage);
             return true;
         }
 
         OfflinePlayer target = Bukkit.getOfflinePlayer(args[0]);
-        if (target == null || !target.hasPlayedBefore() && !target.isOnline()) {
-            sender.sendMessage(ChatColor.RED + "Player not found.");
+        if (!target.hasPlayedBefore() && !target.isOnline()) {
+            Component playerNotFoundMessage = LegacyComponentSerializer.legacyAmpersand().deserialize("&cPlayer not found.");
+            sender.sendMessage(playerNotFoundMessage);
             return true;
         }
 
         UUID targetUUID = target.getUniqueId();
         if (punishmentManager.isBanned(targetUUID)) {
-            sender.sendMessage(ChatColor.RED + "That player is already banned.");
+            Component alreadyBannedMessage = LegacyComponentSerializer.legacyAmpersand().deserialize("&cThat player is already banned.");
+            sender.sendMessage(alreadyBannedMessage);
             return true;
         }
 
         boolean silent = Arrays.stream(args).anyMatch(arg -> arg.equalsIgnoreCase("-s"));
-
         String reason = Arrays.stream(args)
                 .skip(1)
                 .filter(arg -> !arg.equalsIgnoreCase("-s"))
                 .collect(Collectors.joining(" "));
 
-        if (reason.isEmpty()) {
+        boolean hasReason = !reason.isEmpty();
+        if (!hasReason) {
             reason = configManager.getDefaultBanReason();
         }
 
@@ -64,26 +68,24 @@ public class BanCommand implements CommandExecutor, TabCompleter {
         BanEntry ban = new BanEntry(targetUUID, target.getName(), ipAddress, reason, staffName, -1);
         punishmentManager.addBan(ban);
 
-        String kickMessage = configManager.getMessage("kick-messages.ban")
+        String kickMessagePath = "ban-kick-message";
+        String kickMessageStr = configManager.getMessage(kickMessagePath, hasReason)
                 .replace("{reason}", reason);
+        Component kickMessage = LegacyComponentSerializer.legacyAmpersand().deserialize(kickMessageStr);
 
         if (target.isOnline()) {
-            target.getPlayer().kickPlayer(ChatColor.translateAlternateColorCodes('&', kickMessage));
+            target.getPlayer().kick(kickMessage);
         }
 
-        String broadcastMessage;
-        if (silent) {
-            broadcastMessage = configManager.getMessage("silent-option.ban-broadcast");
-        } else {
-            broadcastMessage = configManager.getMessage("ban-broadcast");
+        if (!silent) {
+            String broadcastMessagePath = "ban-broadcast";
+            String broadcastMessageStr = configManager.getMessage(broadcastMessagePath, hasReason)
+                    .replace("{player}", target.getName())
+                    .replace("{staff}", staffName)
+                    .replace("{reason}", reason);
+            Component broadcastMessage = LegacyComponentSerializer.legacyAmpersand().deserialize(broadcastMessageStr);
+            Bukkit.getServer().broadcast(broadcastMessage);
         }
-
-        broadcastMessage = broadcastMessage
-                .replace("{player}", target.getName())
-                .replace("{staff}", staffName)
-                .replace("{reason}", reason);
-
-        Bukkit.broadcastMessage(ChatColor.translateAlternateColorCodes('&', broadcastMessage));
 
         return true;
     }
@@ -97,8 +99,8 @@ public class BanCommand implements CommandExecutor, TabCompleter {
                     .collect(Collectors.toList());
         }
         if (args.length > 1) {
-            if ("-s".startsWith(args[args.length -1].toLowerCase())) {
-                return new ArrayList<>(Arrays.asList("-s"));
+            if ("-s".startsWith(args[args.length - 1].toLowerCase())) {
+                return new ArrayList<>(List.of("-s"));
             }
         }
         return new ArrayList<>();
