@@ -3,8 +3,9 @@ package com.jerae.jsecurity.commands;
 import com.jerae.jsecurity.managers.ConfigManager;
 import com.jerae.jsecurity.managers.MuteEntry;
 import com.jerae.jsecurity.managers.PunishmentManager;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer;
 import org.bukkit.Bukkit;
-import org.bukkit.ChatColor;
 import org.bukkit.OfflinePlayer;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
@@ -31,30 +32,33 @@ public class MuteCommand implements CommandExecutor, TabCompleter {
     @Override
     public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
         if (args.length < 1) {
-            sender.sendMessage(ChatColor.RED + "Usage: /mute <player> [reason] [-s]");
+            Component usageMessage = LegacyComponentSerializer.legacyAmpersand().deserialize("&cUsage: /mute <player> [reason] [-s]");
+            sender.sendMessage(usageMessage);
             return true;
         }
 
         OfflinePlayer target = Bukkit.getOfflinePlayer(args[0]);
-        if (target == null || !target.hasPlayedBefore() && !target.isOnline()) {
-            sender.sendMessage(ChatColor.RED + "Player not found.");
+        if (!target.hasPlayedBefore() && !target.isOnline()) {
+            Component playerNotFoundMessage = LegacyComponentSerializer.legacyAmpersand().deserialize("&cPlayer not found.");
+            sender.sendMessage(playerNotFoundMessage);
             return true;
         }
 
         UUID targetUUID = target.getUniqueId();
         if (punishmentManager.isMuted(targetUUID)) {
-            sender.sendMessage(ChatColor.RED + "That player is already muted.");
+            Component alreadyMutedMessage = LegacyComponentSerializer.legacyAmpersand().deserialize("&cThat player is already muted.");
+            sender.sendMessage(alreadyMutedMessage);
             return true;
         }
 
         boolean silent = Arrays.stream(args).anyMatch(arg -> arg.equalsIgnoreCase("-s"));
-
         String reason = Arrays.stream(args)
                 .skip(1)
                 .filter(arg -> !arg.equalsIgnoreCase("-s"))
                 .collect(Collectors.joining(" "));
 
-        if (reason.isEmpty()) {
+        boolean hasReason = !reason.isEmpty();
+        if (!hasReason) {
             reason = configManager.getDefaultMuteReason();
         }
 
@@ -63,26 +67,24 @@ public class MuteCommand implements CommandExecutor, TabCompleter {
         MuteEntry mute = new MuteEntry(targetUUID, target.getName(), reason, staffName, -1);
         punishmentManager.addMute(mute);
 
-        String muteMessage = configManager.getMessage("mute-message")
+        String muteMessagePath = "mute-message";
+        String muteMessageStr = configManager.getMessage(muteMessagePath, hasReason)
                 .replace("{reason}", reason);
+        Component muteMessage = LegacyComponentSerializer.legacyAmpersand().deserialize(muteMessageStr);
 
         if (target.isOnline()) {
-            target.getPlayer().sendMessage(ChatColor.translateAlternateColorCodes('&', muteMessage));
+            target.getPlayer().sendMessage(muteMessage);
         }
 
-        String broadcastMessage;
-        if (silent) {
-            broadcastMessage = configManager.getMessage("silent-option.mute-broadcast");
-        } else {
-            broadcastMessage = configManager.getMessage("mute-broadcast");
+        if (!silent) {
+            String broadcastMessagePath = "mute-broadcast";
+            String broadcastMessageStr = configManager.getMessage(broadcastMessagePath, hasReason)
+                    .replace("{player}", target.getName())
+                    .replace("{staff}", staffName)
+                    .replace("{reason}", reason);
+            Component broadcastMessage = LegacyComponentSerializer.legacyAmpersand().deserialize(broadcastMessageStr);
+            Bukkit.getServer().broadcast(broadcastMessage);
         }
-
-        broadcastMessage = broadcastMessage
-                .replace("{player}", target.getName())
-                .replace("{staff}", staffName)
-                .replace("{reason}", reason);
-
-        Bukkit.broadcastMessage(ChatColor.translateAlternateColorCodes('&', broadcastMessage));
 
         return true;
     }
@@ -96,8 +98,8 @@ public class MuteCommand implements CommandExecutor, TabCompleter {
                     .collect(Collectors.toList());
         }
         if (args.length > 1) {
-            if ("-s".startsWith(args[args.length -1].toLowerCase())) {
-                return new ArrayList<>(Arrays.asList("-s"));
+            if ("-s".startsWith(args[args.length - 1].toLowerCase())) {
+                return new ArrayList<>(List.of("-s"));
             }
         }
         return new ArrayList<>();
